--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Logs
-logs
+# logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +7,38 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# dependencies
+node_modules/
 
-# Editor directories and files
+# build output
+dist/
+dist-ssr/
+.vite/
+
+# test coverage
+coverage/
+
+# EF
+.env
+.env.*
+!.env.example
+
+# local config
+*.local
+.npmrc
+
+# editor directories/files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+.eslintcache
+
+.vercel/
